<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item android:title="@string/menu_group_general">
        <group android:checkableBehavior="single">
            <item
                    android:id="@+id/nav_start"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_start"/>
            <item
                    android:id="@+id/nav_contact"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_contact"/>
        </group>


    </item>

    <item android:title="@string/menu_group_user">
        <menu>
            <item
                    android:id="@+id/nav_favourites"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menu_favourites"/>
            <item
                    android:id="@+id/nav_delete_user"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/menu_delete_user"/>
            <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/menu_logout"/>
        </menu>

    </item>

</menu>
